bundled_metadata/force-app/main/default/objects/Checklist_Submission__c/Checklist_Submission__c.object-meta.xml
<CustomObject>
    <label>Checklist Submission</label>
    <nameField>
        <displayFormat>SUB-{000000000}</displayFormat>
        <label>Submission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Submission</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>