bundled_metadata/force-app/main/default/objects/Checklist_Submission__c/fields/Checklist_Response_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Response_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Checklist Response External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>